# parallel-final-project

./: CMakeLists.txt  Makefile  README.md  README.txt  SEIR.c  board.h  cell_state.h  person.h
